--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div id="win">0</div>
         <div id="lose">0</div>
       </div>
+      <input type="button"  class="button" id="reset" name="" value="Reset">
       <input type="button" id="paper" class="button" value="paper"></input>
       <input type="button" id="rock" class="button" value="rock"></input>
       <input type="button" id="scissors" class="button" value="scissors"></input>
